--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@
 DATABASE_URL="file:./db.mysql"
 CLERK_SECRET_KEY=""
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
