--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: TypeScript type checking
-        run: npm run type-check
+        run: npm run typecheck
 
       - name: Lint
         run: npm run lint
